chore: refactor and cleanup codebase
- Use final where possible
- Handle private router classes and methods